2001-12-08  Bruno Haible  <bruno@clisp.org>

	* msgfilter.c: Renamed from msgexec.c.
	* msgexec.c: New file.
	* Makefile.am (bin_PROGRAMS): Add msgfilter.
	(msgfilter_SOURCES): New variable.
	(msgfilter_LDADD): New variable.

2001-12-07  Bruno Haible  <bruno@clisp.org>

	* msgexec.c (keep_header): New variable.
	(long_options): New option --keep-header.
	(usage): Document option --keep-header.
	(process_message): Implement --keep-header.

2001-12-06  Bruno Haible  <bruno@clisp.org>

	* format.h (struct formatstring_parser): Add 'noisy' argument to
	'check' field.
	* format-c.c (format_check): Add 'noisy' argument.
	* format-java.c (format_check): Likewise.
	* format-lisp.c (format_check): Likewise.
	* format-pascal.c (format_check): Likewise.
	* format-python.c (format_check): Likewise.
	* format-ycp.c (format_check): Likewise.
	* msgfmt.c (check_pair): Pass noisy=true.
	* message.c: Include format.h.
	(msgfmt_check_pair_fails): New function.
	(message_merge): Set fuzzy flag when adding a -format specifier that
	needs the translator's attention.

2001-12-10  Bruno Haible  <bruno@clisp.org>

	* x-java.l (tailcmp): If s1 ends with s2, it must be either equal to
	s2 or have a dot right before s2.

2001-12-01  Bruno Haible  <bruno@clisp.org>

	* msginit.c (project_id): Make it possible to specify the location
	of the project-id script through an environment variable.
	(project_id_version): Likewise.

2001-12-03  Tommy Johansson  <tommy.johansson@kanalen.org>

	* x-java.l (tailcmp): New function.
	(do_compare): Use it instead of strcmp.
	(extract_java): After seeing an invocation, don't set the state to
	STATE_NONE.

2001-11-30  Bruno Haible  <bruno@clisp.org>

	* message.c (message_merge): Determine whether postprocessing is
	needed.
	* msgmerge.c (match_domain): Postprocess some problematic cases.
	* Makefile.am (libgettextsrc_la_SOURCES): Add plural.c.
	(msgfmt_SOURCES): Remove plural.c.

2001-11-29  Bruno Haible  <bruno@clisp.org>
